IndexedDB: IDBCursor.continue(key) does not throw for key "behind" cursor https://bugs.webkit.org/show_bug.cgi?id=92562

Reviewed by Ojan Vafai.

Source/WebCore:

Per spec, IDBCursor.continue(key) should throw for forward cursors
if key <= current key, and for reverse cursors if key >= current key.
Code was present on the back end but the error code was ignored, possibly
broken in a recent refactor, and there were no tests for this case.

Test: storage/indexeddb/cursor-continue-dir.html

* Modules/indexeddb/IDBCursor.cpp:
(WebCore::IDBCursor::advance): Handle async transaction termination.
(WebCore::IDBCursor::continueFunction): Move checks here from backend.
* Modules/indexeddb/IDBCursorBackendImpl.cpp:
(WebCore::IDBCursorBackendImpl::IDBCursorBackendImpl): Don't need direction param.
(WebCore::IDBCursorBackendImpl::continueFunction): Remove checks.
* Modules/indexeddb/IDBCursorBackendImpl.h: Only IDBBackingStore::cursor needs direction now.
(WebCore::IDBCursorBackendImpl::create):
(IDBCursorBackendImpl):
* Modules/indexeddb/IDBIndexBackendImpl.cpp:
(WebCore::IDBIndexBackendImpl::openCursorInternal): Drop unused param.
* Modules/indexeddb/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::openCursorInternal): Ditto.

LayoutTests:

Ensure cursor.continue(key) throws if key is "behind" the cursor.

* storage/indexeddb/cursor-continue-dir-expected.txt: Added.
* storage/indexeddb/cursor-continue-dir.html: Added.
* storage/indexeddb/resources/cursor-continue-dir.js: Added.
(test.request.onsuccess.request.onsuccess.request.onsuccess):
(test.request.onsuccess.request.onsuccess):
(test.request.onsuccess):
(test):
(testCursors):
(testForwardCursor.request.onsuccess):
(testForwardCursor):
(testReverseCursor.request.onsuccess):
(testReverseCursor):


Canonical link: https://commits.webkit.org/110732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124361 268f45cc-cd09-0410-ab3c-d52691b4dbfc